--- a/docs/team/ngswbryan.adoc
+++ b/docs/team/ngswbryan.adoc
@@ -32,7 +32,7 @@ The custom commands feature required handling command words that are not recogni
 |_Given below is a brief write-up of my implemented features and other helpful contributions to the project._
 |===
 
-* *Largest enhancement*: Added *the learning of wrong commands into custom commands feature*
+* *Major enhancement*: Added *the learning of wrong commands into custom commands feature*
 ** What it does: It gives the user the ability to learn commands which they have typed wrongly into TutorAid as a basic command. These custom commands will be saved and pop up as suggestions in the future.
 ** Justification: This feature improves the product significantly because TutorAid has many different features with 37 commands currently and is still growing. It is extremely difficult for the user to remember all these command words without constantly referring to the user guide. They are highly likely to end up keying in command words wrongly based on their own typing habits. Learning these typing habits will help to improve their efficiency in using TutorAid.
 ** Implementation: This enhancement alters the flow of command execution in TutorAid. Executing an unknown command that TutorAid does not recognize changes the command execution pathway and sets TutorAid into "learner mode". This is facilitated by the use of a TreeMap in the parser which stores a list of all available commands and their actions as key-value pairs (basic commands and previous custom commands loaded from .json file). TutorAid will check against this TreeMap to see if the command word exists. If it does not, this command word is saved onto a Stack in the Model component to be retrieved in the next command. If the next command is still unknown, the next command is also added to the Stack. When a valid command that exists in entered, the last unknown command is retrieved from the top on the Stack and is mapped to the action of the aforementioned valid command. This key-value pair is then added to the TreeMap and saved into our .json file. TutorAid is then set back into normal mode. The TreeMap is also used to generate command suggestions based on the user's input.
