--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -79,25 +79,19 @@ Users can switch between respective windows in order to make full use of the app
 
 [NOTE]
 `tab b/game` is used instead of `tab b/typinggame` to simplify typing. +
-The `Engagement` window will be the default window upon starting the application.
+`Engagement` window is set to default window upon starting the application.
 
-.Engagement (default) window displayed on start-up of the application.
-image::tab_1_default.png[width="500"]
+If the user wants to switch to different windows, simply enter the tab command
+with refer to the menu name listed on the left end of the application window. +
 
-Now, if the user wants to switch to different windows, simply enter the tab command
-with refer to the menu name listed on the left end of the application window. For example, user enters `tab b/calendar`
-switch to calendar view window.
-
-.input section with tab command entered `tab b/calendar`
-image::tab_2.png[width="520"]
+For example, user enters `tab b/calendar`
+, which the system will switch to calendar view window with a result display message set to "Switched to window: Calendar". Refer to the screenshot below.
 
 [NOTE]
 Users who prefer using mouse over typing can alternatively click the green tabs on the top to switch to different menu windows.
 
-Below is the screenshot after entering the command.
+image::tab_2.png[width="800"]
 
-.tab switch successfully executed from engagement window to calendar window.
-image::tab_3.png[width="500"]
 
 //end::tab-command[]
 
@@ -369,6 +363,8 @@ image::pdf_2.png[width="450"]
 
 User can also double click the list item in the documents explorer tree view to open the document file on their local computer file system. Below is the sample of generated document from the system.
 
+NOTE: Do not manually modify the document file name in the `reports/` directory as it might cause system failure in recognising the documents.
+
 .pdf document sample
 image::pdf_sample.png[width="480", align="center"]
 
@@ -395,8 +391,8 @@ NOTE: PDF generation and deletion operations cannot be undone via `undo` command
 +
 .duplicate file exception message displayed in status text field.
 image::pdf_error_2.png[width="600"]
-2. System will not allow user to delete directories in the documents explorer tree view. (Figure 26)
-3. System will throw an exception message in the status field if user locks the document. (Figure 26)
+2. System will not allow user to delete directories in the documents explorer tree view.
+3. System will throw an exception message in the status field if user locks the document.
 +
 .file deletion exception message displayed in the status text field.
 image::pdf_error_1.png[width="600"]
