Add UML diagram for Ui

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -78,7 +78,7 @@ The sections below give more details of each component.
 === UI component
 
 .Structure of the UI Component
-image::UiClassDiagram.png[]
+image::UiClassUml.png[]
 
 *API* : link:{repoURL}/src/main/java/seedu/difficulty/ui/Ui.java[`Ui.java`]
 
