--- a/docs/team/ambhinav.adoc
+++ b/docs/team/ambhinav.adoc
@@ -32,7 +32,7 @@ display of task deadlines format of the app between 24hr and 12hr.
 handle the increasing complexity additional features may bring.
 ** Highlights: As of the latest release, this enhancement affects any command that deals with time sensitive data. It required an in-depth analysis of design alternatives. +
 The implementation was moderately difficult as I was able to adapt the integration of the
-`UserSettings` component based on the implementation of the existing `UserPrefs` component in AB3. The more difficult aspect was to design the component in such a way where it would be easy to extend its functionality
+`UserSettings` component based on existing components. The more difficult aspect was to design the component in such a way where it would be easy to extend its functionality
 in the event more user settings are to be added. I tried to incorporate as much of the OOP principles as possible so as to
 make the feature more robust.
 ** Credits: I adapted some code that does responsive highlighting for the settings panel in +Work from a course mate.
@@ -53,14 +53,14 @@ make the feature more robust.
 *** Tracked and helped to fix bugs found during developer testing using GitHub issues (Issue https://github.com/AY1920S1-CS2103T-T12-1/main/issues/82[#82])
 *** Added additional tests to the repository to bump coverage up from 37% to 39% (Pull request https://github.com/AY1920S1-CS2103T-T12-1/main/pull/166[#166])
 ** Enhancements to the application:
-*** Created a modular framework in `Ui` to make it easier for teammates to add different user views for their respective features (Pull request https://github.com/AY1920S1-CS2103T-T12-1/main/pull/51[#51])
+*** Created a modular framework in `UI` to make it easier for teammates to add different user views for their respective features (Pull request https://github.com/AY1920S1-CS2103T-T12-1/main/pull/51[#51])
 ** Documentation:
 *** Did cosmetic tweaks to existing contents of the User Guide: https://github.com/AY1920S1-CS2103T-T12-1/main/pull/152[#152]
 ** Community:
-*** PRs reviewed (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-T12-1/main/pull/55[#55]
+*** Reviewed pull requests made by teammates to the repository on GitHub (with non-trivial review comments): https://github.com/AY1920S1-CS2103T-T12-1/main/pull/55[#55]
 *** Reported bugs and suggestions for other teams in the module (examples:  https://github.com/ambhinav/ped/issues/6[1], https://github.com/ambhinav/ped/issues/5[2], https://github.com/ambhinav/ped/issues/3[3])
 ** Tools:
-*** Added the test coverage tool Coveralls to the team repo (Pull request https://github.com/AY1920S1-CS2103T-T12-1/main/pull/149[#149])
+*** Added the test coverage tool Coveralls to the team repository (Pull request https://github.com/AY1920S1-CS2103T-T12-1/main/pull/149[#149])
 
 == Contributions to the User Guide
 
